# sensix-power-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
1stparty/: CMakeLists.txt
1stparty/elsen-lib/: .clang-format  .gitignore  CMakeLists.txt  LICENSE
1stparty/elsen-lib/cmake/: Cache.cmake  CompilerWarnings.cmake  Coverage.cmake  Doxygen.cmake  EmbedResources.cmake  IPO.cmake  PlatformESP32.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
1stparty/elsen-lib/include/elsen/: arduino_compatibility.hh  global.hh  logger.hh  mqtt_client.hh  signal.hh  utilities.hh  wifi.hh
1stparty/elsen-lib/include/elsen/arduino/: spi.hh  utilities.hh
1stparty/elsen-lib/include/elsen/devices/: spi.hh
1stparty/elsen-lib/lib/: src.cmake
1stparty/elsen-lib/lib/esp32/: esp32.cmake  logger.cc  mqtt_client.cc  signal.cc  utilities.cc  wifi.cc
1stparty/elsen-lib/lib/esp32/arduino/: spi.cc  utilities.cc
1stparty/elsen-lib/lib/esp32/devices/: spi.cc
1stparty/elsen-lib/lib/x86/: signal.cc  x86.cmake
1stparty/elsen-lib/test/: CMakeLists.txt  main.cc  test_list.hh  test_logger.cc  test_mqtt_client.cc  test_signal.cc  test_wifi.cc
cmake/: TargetArch.cmake
data/: mqtt_s1_eu_hivemq_cloud.pem
hardware_design/: LICENSE
hardware_design/PowerMonitor-AFE/PowerMonitor-AFE/: PowerMonitor-AFE.kicad_pcb  PowerMonitor-AFE.kicad_pcb-bak  PowerMonitor-AFE.net  PowerMonitor-AFE.pro  PowerMonitor-AFE.sch  PowerMonitor-AFE.sch-bak  PowerMonitor-AFE.step  fp-lib-table  sym-lib-table
hardware_design/PowerMonitor-AFE/PowerMonitor-AFE/PowerMonitor-AFE.pretty/: SOT-23.kicad_mod
hardware_design/PowerMonitor-ControllerBoard/: PowerMonitor-ControllerBoard.kicad_pcb  PowerMonitor-ControllerBoard.kicad_pcb-bak  PowerMonitor-ControllerBoard.net  PowerMonitor-ControllerBoard.pro  PowerMonitor-ControllerBoard.sch  PowerMonitor-ControllerBoard.sch-bak  _autosave-PowerMonitor-ControllerBoard.kicad_pcb  fp-info-cache  fp-lib-table  sym-lib-table
hardware_design/PowerMonitor-ControllerBoard/PowerMonitor-ControllerBoard.pretty/: 1792863.kicad_mod  DF01S-T.kicad_mod  DFN6 3x3 0.95.kicad_mod  HSOP-6J.kicad_mod  USON-8L 3x2 ZR.kicad_mod
hardware_design/SPD_PowerMonitor-AFE/: SPD_PowerMonitor-AFE.kicad_pcb  SPD_PowerMonitor-AFE.net  SPD_PowerMonitor-AFE.pro  SPD_PowerMonitor-AFE.sch  sym-lib-table
hardware_design/SPD_PowerMonitor-Controller/: SPD_PowerMonitor.kicad_pcb  SPD_PowerMonitor.net  SPD_PowerMonitor.pro  SPD_PowerMonitor.sch
main/: CMakeLists.txt  Kconfig.projbuild  main.cc
src/: CMakeLists.txt  afe_reader.cc  main.cc  readings.cc  sample_buffer.cc
src/include/: afe_reader.hh  common.hh  math.hh  readings.hh  sample_buffer.hh
test/: CMakeLists.txt  main.cc  test_fft.cc  test_readings.cc  test_sample_buffer.cc
test/include/: test_list.hh
